[project]
name = "highway-rope-ppo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[other]>=1.1.1",
    "highway-env>=1.10.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pip>=25.0.1",
    "pygame>=2.6.1",
    "uv>=0.6.9",
]

[project.optional-dependencies]
cu124 = ["torch>=2.6.0", "torchvision>=0.21.0"]
# rocm = ["torch>=2.6.0", "torchvision>=0.21.0"]


# [tool.uv]
# conflicts = [[{ extra = "rocm" }, { extra = "cu124" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", extra = "cu124" },
  # { index = "pytorch-rocm", extra = "rocm" },
]
torchvision = [
  { index = "pytorch-cu124", extra = "cu124" },
  # { index = "pytorch-rocm", extra = "rocm" },
]

# [[tool.uv.index]]
# name = "pytorch-rocm"
# url = "https://download.pytorch.org/whl/rocm6.2.4"
# explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
